# cribbage

./: Cribbage.sln  Cribbage.vcxproj  Cribbage.vcxproj.filters  README.md  config.json
Core/: Board.cpp  Board.h  Card.cpp  Deck.h  Driver.cpp  Score.h
Old/cpp/Cribbage/: Cribbage.sln  README.md
Old/cpp/Cribbage/Core/: Board.cpp  Card.h  Constants.h  GlobalHelperFunctions.cpp  GlobalHelperFunctions.h  ctpl_stl.h  json.hpp
Old/cpp/Cribbage/Output/: GameStats.h  SimulationStats.cpp  SimulationStats.h
Old/cpp/Cribbage/Players/: Computer.cpp  HardBot.cpp  Player.h
Old/rust/cribbage/: Cargo.toml
Old/rust/cribbage/src/core/: board.rs
Output/: GameStats.cpp  GameStats.h  SimulationStats.h
Players/: Computer.cpp  Computer.h  HardBot.cpp  HardBot.h  Human.cpp  Human.h  MediumBot.cpp  MediumBot.h  Player.cpp  Player.h
SorceCode/Core/: Board.cpp  Board.h  Card.h  Deck.cpp  Driver.cpp  GlobalHelperFunctions.cpp  TestDriver.cpp
SorceCode/Players/: Computer.cpp  Computer.h  Player.cpp
rocket-server/: Cargo.toml
rocket-server/client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
rocket-server/client/src/: index.html
rocket-server/client/src/code/: main.tsx  socketComm.ts  state.ts
rocket-server/client/src/code/components/: BaseLayout.tsx  BoardArea.tsx  HandArea.tsx
rocket-server/client/src/css/: main.css
rocket-server/src/: main.rs  server.rs
