[package]
name = "rocket-server"
version = "0.1.0"
authors = ["Ben Clark <thrinador1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-files = "0.2.2"
actix-rt = "1.0"
actix-web = "2.0"
actix-web-actors = "2.0.0"
listenfd = "0.3"
rand = "0.7"
